# LMS-Backend

./: db.sqlite3  pyproject.toml
academics/: __init__.py  models.py  serializers.py  urls.py  views.py
core/: permissions.py
courses/: models.py  serializers.py  views.py
lms_project/: settings.py  urls.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
